tests/parse-errors/issue026-comp.zir
fun comp f() {
  if(true);
  return 0;
}

let comp main = read[int] >>> write[int]
